base/services/batch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uyuni-suite-batch
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: uyuni-suite-batch
  type: ClusterIP
