base/services/core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uyuni-manager-core
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: uyuni-manager-core
  type: ClusterIP
