base/services/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uyuni-suite-frontend
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: uyuni-suite-frontend
  type: ClusterIP
