base/services/keycloak-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-external
spec:
  type: ExternalName
  externalName: keycloak-http.keycloak.svc.cluster.local
