base/services/manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uyuni-suite-manager
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: uyuni-suite-manager
  type: ClusterIP
