base/services/monitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uyuni-manager-monitor
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: uyuni-manager-monitor
  type: ClusterIP
