base/services/noti-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uyuni-manager-noti
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: uyuni-manager-noti
  type: ClusterIP
