base/services/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uyuni-manager-websocket
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: uyuni-manager-websocket
  type: ClusterIP
