base/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-uyuni-suite
  annotations:
    nginx.org/client-max-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.org/websocket-services: "uyuni-manager-websocket"
spec:
  ingressClassName: nginx
  rules:
  - host: "uyuni-suite.xiilab.com"
    http:
      paths:
      - pathType: Prefix
        path: "/auth"
        backend:
          service:
            name: keycloak-external
            port:
              number: 80
      - pathType: Prefix
        path: "/api/v1/monitor"
        backend:
          service:
            name: uyuni-manager-monitor
            port:
              number: 8080
      - pathType: Prefix
        path: "/api/v1/manager"
        backend:
          service:
            name: uyuni-manager-core
            port:
              number: 8080
      - pathType: Prefix
        path: "/docs/monitorDocs.html"
        backend:
          service:
            name: uyuni-manager-monitor
            port:
              number: 8080
      - pathType: Prefix
        path: "/docs"
        backend:
          service:
            name: uyuni-manager-core
            port:
              number: 8080
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uyuni-suite-frontend
            port:
              number: 80
      - pathType: Prefix
        path: "/terminal"
        backend:
          service:
            name: uyuni-manager-websocket
            port:
              number: 8080
